# src/controller/userController.ts
@@ -16,13 +16,13 @@ export class UserController extends Controller {
 	}
 
 	/**
-	 * Get the user of the system
+	 * Verify if exists an user with the email in the system
 	 *
 	 */
 	@SuccessResponse(200)
-	@Get('{email}')
+	@Get('/exists/{email}')
 	public async get(@Path() email: string) {
-		const res = await this.userService.findByEmail({ email })
+		const res = await this.userService.existsByEmail({ email: email.toLowerCase() })
 		if (typeof res === 'string') return ControllerUtils.handleResponse(res, this)
 		return res
 	}
@@ -42,9 +42,10 @@ export class UserController extends Controller {
 		@FormField() password?: string,
 		@UploadedFile() icon?: Express.Multer.File
 	) {
-		const data = {
-			id: req.user.sub, username, email, password, icon
+		const data: { id: string; username?: string; password?: string; icon?: Express.Multer.File; email?: string; } = {
+			id: req.user.sub, username, password, icon
 		}
+		if (email) data['email'] = email.toLowerCase()
 		const res = await this.userService.update(data)
 		if (typeof res === 'string') return ControllerUtils.handleResponse(res, this)
 		return res
